--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,10 +115,14 @@
     <string-array name="language_entries">
         <item>Deutsch</item>
         <item>English</item>
+        <item>Italiano</item>
+        <item>Español</item>
     </string-array>
     <string-array name="language_values">
         <item>de</item>
         <item>en</item>
+        <item>it</item>
+        <item>es</item>
     </string-array>
     <string name="title_activity_score_board">Scoreboard</string>
     <!---->
