--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="PosDefAbbrev">D</string>
     <string name="PosAtkAbbrev">A</string>
     <string name="PositionAbbrev">P</string>
+    <string name="NoRemark">-</string>
 
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
