--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -126,4 +126,10 @@
     <string name="title_activity_score_board">Bestenliste</string>
     <string name="name">Name</string>
     <string name="preference_webservice_ip_default" translatable="false">192.168.0.2</string>
+    <string-array name="spinnerScoreboard">
+        <item>Siege</item>
+        <item>Tore geschossen</item>
+        <item>Tore bekommen</item>
+        <item>Verloren</item>
+    </string-array>
 </resources>
